FINAL STAGE NOOBS

--- a/android/project.properties
+++ b/android/project.properties
@@ -12,3 +12,6 @@
 
 # Project target.
 target=android-19
+android.library.reference.1=..\\..\\..\\info\\google_play_services\\libproject\\google-play-services_lib
+android.library.reference.2=..\\..\\..\\info\\BaseGameUtils
+android.library=false
